tests/baselines/reference/declarationEmitDestructuringPrivacyError.errors.txt
tests/cases/compiler/declarationEmitDestructuringPrivacyError.ts(4,20): error TS4025: Exported variable 'y' has or is using private name 'c'.


==== tests/cases/compiler/declarationEmitDestructuringPrivacyError.ts (1 errors) ====
    module m {
        class c {
        }
        export var [x, y, z] = [10, new c(), 30];
                       ~
!!! error TS4025: Exported variable 'y' has or is using private name 'c'.
    }